<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity">
    <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_rectangle" tools:layout_editor_absoluteY="-179dp"
            tools:layout_editor_absoluteX="-550dp"/>
    <ImageView
            android:id="@+id/splashIcon"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:src="@drawable/schoolbooks"
            android:transitionName="appIconTransition"
            app:layout_constraintEnd_toEndOf="@+id/background_image"
            app:layout_constraintStart_toStartOf="@+id/background_image" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="@+id/background_image"
            app:layout_constraintHorizontal_bias="0.423"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@+id/splashIcon">

        <TextView
                android:id="@+id/app_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:transitionName="appNameTransition"
                app:fontFamily="@font/masque"
                android:textColor="@color/colorAccent"
                android:textSize="50sp"/>
        <TextView
                android:id="@+id/app_desc_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_desc"
                app:fontFamily="@font/spiderman_homecoming"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:shadowColor="@color/shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"

        />
        <TextView
                android:id="@+id/app_desc2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_desc_2"
                android:layout_marginTop="5dp"
                app:fontFamily="@font/spiderman_homecoming"
                android:textColor="@color/colorAccentDark"
                android:textSize="20sp"
                android:shadowColor="@color/shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"

        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>